--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<a href="">Accueil</a>
 				<a href="groupe.html">Groupe</a>
 				<a href="tools.html">Outils</a>
-				<a href="links.html">Liens et sources</a>
+				<a href="downloads.html">Téléchargement</a>
 			</div>
 		</nav>
 		<a href="links.html" id="download">Télécharger l'application</a>
@@ -27,7 +27,7 @@
 
 	<section>
 		<h2>Formation du groupe</h2>
-		<p>Notre groupe s’est formé naturellement avec la classe S4E, la classe  ́ephémère regroupant  les élèves  censés partir à l’étranger. Les membres du groupe Elfes&Mer sont: Yann Boudry notre chef de projet, ainsi que Azéline Aillet, Pierre-Corentin Auger, Vincent Libeskind et Scott Tallec. La classe étant seulement composée de 7 personnes, nous nous sommes très vite entendus, ce qui a mis une bonne ambiance dans le groupe.  Malgré notre répartition dans différentes classes, nous essayons de faire plusieurs réunions afin de parler de l’avancement de chacun, et de mettre en communs les parties qui sont liées.</p>
+		<p>Notre groupe s’est formé naturellement avec la classe S4E, la classe éphémère regroupant  les élèves  censés partir à l’étranger. Les membres du groupe Elfes&Mer sont: Yann Boudry notre chef de projet, ainsi que Azéline Aillet, Pierre-Corentin Auger, Vincent Libeskind et Scott Tallec. La classe étant seulement composée de 7 personnes, nous nous sommes très vite entendus, ce qui a mis une bonne ambiance dans le groupe.  Malgré notre répartition dans différentes classes, nous essayons de faire plusieurs réunions afin de parler de l’avancement de chacun, et de mettre en communs les parties qui sont liées.</p>
 	</section>
 
 	<footer>
