--- a/tools.html
+++ b/tools.html
@@ -18,7 +18,7 @@
 				<a href="index.html">Accueil</a>
 				<a href="groupe.html">Groupe</a>
 				<a href="">Outils</a>
-				<a href="links.html">Liens et sources</a>
+				<a href="downloads.html">Téléchargement</a>
 			</div>
 		</nav>
 		<a href="links.html" id="download">Télécharger l'application</a>
@@ -56,6 +56,12 @@
 			</li>
 			<li>
 				<h2>Présentation</h2>
+				<div class="links_content">
+					<a href="https://www.latex-project.org/" target="blank">
+						<img src="images/latex.png">
+						<p>LateX</p>
+					</a>
+				</div>
 			</li>
 		</ul>
 	</section>
