--- a/groupe.html
+++ b/groupe.html
@@ -18,7 +18,7 @@
 				<a href="index.html">Accueil</a>
 				<a href="">Groupe</a>
 				<a href="tools.html">Outils</a>
-				<a href="links.html">Liens et sources</a>
+				<a href="downloads.html">Téléchargement</a>
 			</div>
 		</nav>
 		<a href="links.html" id="download">Télécharger l'application</a>
