fixed broken link for telecharger l'application

--- a/groupe.html
+++ b/groupe.html
@@ -21,7 +21,7 @@
 				<a href="downloads.html">Téléchargement</a>
 			</div>
 		</nav>
-		<a href="links.html" id="download">Télécharger l'application</a>
+		<a href="downloads.html" id="download">Télécharger l'application</a>
 	</header>
 	
 	<section>
