added story line on main page and added opengl in tools + corrected group animation for text

--- a/downloads.html
+++ b/downloads.html
@@ -27,10 +27,12 @@
 
 	<section id="files_list">
 		<h2>Liens de téléchargement</h2>
+		<p>Vous pouvez télécharger notre rapport 2 ici:</p>
+		<a href="" class="files">Télécharger le rapport 2</a>
 		<p>Vous pouvez télécharger notre rapport 1 ici:</p>
-		<a href="" class="files">Télécharger le rapport</a>
+		<a href="fichiers/Soutenance1.pdf" target="blank" class="files">Télécharger le rapport 1</a>
 		<p>Vous pouvez télécharger le cahier des charges ici:</p>
-		<a href="fichiers/Cahier_des_charges_S4.pdf" target="blank" class="files">Télécharger le cahier des charges</a>
+		<a href="fichiers/Cahier_des_charges.pdf" target="blank" class="files">Télécharger le cahier des charges</a>
 	</section>
 
 	<footer>
