--- a/groupe.html
+++ b/groupe.html
@@ -29,23 +29,23 @@
 		<ul id="membres">
 			<li class="personne">
 				<img src="images/azeline.aillet_small.jpg" style="--index: 0;">
-				<p class="introduction">Azéline Aillet</p>
+				<p class="introduction" style="--index: 0">Azéline Aillet</p>
 			</li>
 			<li class="personne">
 				<img src="images/vincent.libeskind_small.jpg" style="--index: 1;">
-				<p class="introduction">Vincent Libeskind</p>
+				<p class="introduction" style="--index: 1">Vincent Libeskind</p>
 			</li>
 			<li class="personne">
 				<img src="images/scott.tallec_small.jpg" style="--index: 2;">
-				<p class="introduction">Scott Tallec</p>
+				<p class="introduction" style="--index: 2">Scott Tallec</p>
 			</li>
 			<li class="personne">
 				<img src="images/pierre-corentin.auger_small.jpg" style="--index: 3;">
-				<p class="introduction">Pierre-Corentin Auger</p>
+				<p class="introduction" style="--index: 3">Pierre-Corentin Auger</p>
 			</li>
 			<li class="personne">
 				<img src="images/yann.boudry_small.jpg" style="--index: 4;">
-				<p class="introduction">Yann Boudry</p>
+				<p class="introduction" style="--index :4">Yann Boudry</p>
 			</li>
 		</ul>		
 	</section>
