--- a/downloads.html
+++ b/downloads.html
@@ -27,12 +27,14 @@
 
 	<section id="files_list">
 		<h2>Liens de téléchargement</h2>
+		<p>Vous poouvez télécharger notre rapport de projet ici:</p>
+		<a href="" target="blank" class="files">Télécharger le rapport de projet</a>
 		<p>Vous pouvez télécharger notre rapport 2 ici:</p>
-		<a href="" class="files">Télécharger le rapport 2</a>
+		<a href="fichiers/Soutenance2.pdf" download="Rapport_de_soutenance_2.pdf" target="blank" class="files">Télécharger le rapport 2</a>
 		<p>Vous pouvez télécharger notre rapport 1 ici:</p>
-		<a href="fichiers/Soutenance1.pdf" target="blank" class="files">Télécharger le rapport 1</a>
+		<a href="fichiers/Soutenance1.pdf" download="Rapport_de_soutenance_1.pdf" target="blank" class="files">Télécharger le rapport 1</a>
 		<p>Vous pouvez télécharger le cahier des charges ici:</p>
-		<a href="fichiers/Cahier_des_charges.pdf" target="blank" class="files">Télécharger le cahier des charges</a>
+		<a href="fichiers/Cahier_des_charges.pdf" download="Cahier_des_charges.pdf" target="blank" class="files">Télécharger le cahier des charges</a>
 	</section>
 
 	<footer>
