added images and required libs

--- a/downloads.html
+++ b/downloads.html
@@ -26,9 +26,24 @@
 
 
 	<section id="files_list">
+		<h2>Librairies nécessaires:</h2>
+		<ul id="librairies">
+			<li><a href="https://www.gtk.org/" target="blank" class="libs">GTK+-3.0</a></li>
+			<li><a href="https://www.cairographics.org/" target="blank" class="libs">Cairo</a></li>
+			<li><a href="https://www.opengl.org/" target="blank" class="libs">OpenGL</a></li>
+			<li><a href="http://freeglut.sourceforge.net/docs/api.php" target="blank" class="libs">freeglut</a></li>
+			<li><a href="https://www.libsdl.org/index.php" target="blank" class="libs">SDL2 + SDL2_image</a></li>
+			<li><a href="https://cglm.readthedocs.io/en/latest/index.html" target="blank" class="libs">cglm (sources sur github)</a></li>
+			<li>librairie standard: stdio, stdlib, stddef, stdarg</li>
+			<li>math</li>
+			<li>string</li>
+			<li>err</li>
+		</ul>
 		<h2>Liens de téléchargement</h2>
-		<p>Vous poouvez télécharger notre rapport de projet ici:</p>
-		<a href="" target="blank" class="files">Télécharger le rapport de projet</a>
+		<p>Vous pouvez télécharger l'exécutable et les sources ici:</p>
+		<a href="" download="projet_223D.zip" target="blank" class="files">Projet</a>
+		<p>Vous pouvez télécharger notre rapport de projet ici:</p>
+		<a href="" download="Rapport_de_projet.pdf" target="blank" class="files">Télécharger le rapport de projet</a>
 		<p>Vous pouvez télécharger notre rapport 2 ici:</p>
 		<a href="fichiers/Soutenance2.pdf" download="Rapport_de_soutenance_2.pdf" target="blank" class="files">Télécharger le rapport 2</a>
 		<p>Vous pouvez télécharger notre rapport 1 ici:</p>
