--- a/index.html
+++ b/index.html
@@ -27,10 +27,22 @@
 
 	<section id="story_line">
 		<div>
+			<h2>Modélisation 2.0</h2>
+			<div class="story_images">
+				<figure class="story_photo_mono">
+					<img src="images/Color3dmodel.png">
+					<figcaption>Modélisation des surfaces</figcaption>
+				</figure>
+			</div>
+			<p>La modélisation à été améliorée avce l'ajout des surfaces entre les lignes topographiques. Chaque couleur correspond à une altitude entre deux lignes. Les couleurs froides modélisent les zones les plus basse de la carte tandis que les couleurs chaudes correspondent aux altitudes les plus élevées. Nous avons également rajouté les cours d'eau, les sentier ainsi que les routes. Les altitudes max et min de la carte sont affichée au dessus de leur coordonnées.</p>
+		</div>
+
+
+		<div>
 			<h2>Interface 2.0</h2>
 			<div class="story_images">
 				<figure class="story_photo_mono">
-					<img src="images/main_screen2.png">
+					<img src="images/main_screen_start.png">
 					<figcaption>Interface améliorée</figcaption>
 				</figure>
 			</div>
