added tesseract library

--- a/downloads.html
+++ b/downloads.html
@@ -34,6 +34,7 @@
 			<li><a href="http://freeglut.sourceforge.net/docs/api.php" target="blank" class="libs">freeglut</a></li>
 			<li><a href="https://www.libsdl.org/index.php" target="blank" class="libs">SDL2 + SDL2_image</a></li>
 			<li><a href="https://cglm.readthedocs.io/en/latest/index.html" target="blank" class="libs">cglm (sources sur github)</a></li>
+			<li><a href="https://github.com/tesseract-ocr/tesseract" target="blank" class="libs">Tesseract + tesseract-data-fra</a></li>
 			<li>librairies standards: stdio, stdlib, stddef, stdarg</li>
 			<li>math</li>
 			<li>string</li>
